# tugtainer

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .releaserc.json  CHANGELOG.md  Dockerfile  Dockerfile.agent  Dockerfile.app  LICENSE  README.md  docker-compose.agent.yml  docker-compose.app.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.sqlite.yml  docker-compose.yml  install.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  readme.md  supervisord.conf
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  discussion.yml  feature-request.yml
.github/workflows/: dev-image.yml  docker-image.yml  main.yml  prod-image.yml  run-tests.yml  semantic-release.yml
agent/: app.py  auth.py  config.py  dev.py  docker_client.py  readme.md  requirements.txt  start.py  test.py
agent/api/: __init__.py  buildx_api.py  command_api.py  common_api.py  container_api.py  image_api.py  manifest_api.py  network_api.py  public_api.py
agent/unil/: asyncall.py
backend/: .gitignore  README.md  app.py  config.py  const.py  dev.py  docker_config.py  exception.py  readme.md  requirements.txt  start.py  test_docker_config.py
backend/alembic/: env.py
backend/api/: auth_api.py  containers_api.py  hosts_api.py  images_api.py  public_api.py  settings_api.py
backend/app/: app.py  config.py  exception.py
backend/core/: __init__.py  action_result.py  agent_client.py  auth_core.py  (+4 more)
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
resources/: icon.psd
shared/: __init__.py
(+489 files in other folders)
