[project]
name = "tugtainer"
version = "1.10.0"
description = "An application for automating docker containers updates with a web ui"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "apprise>=1.9.5",
    "bcrypt>=5.0.0",
    "cachetools>=6.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "python-jose>=3.5.0",
    "python-on-whales>=0.79.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.16",
    "fastapi[standard]>=0.121.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.38.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]
